[package]
name = "bx"
description = "A smaller, faster Box CLI"
version = "0.0.2"
authors = ["Matt Willer <matt.r.willer@gmail.com>"]
repository = "https://github.com/mattwiller/bx"
edition = "2018"
license = "Apache-2.0"
keywords = ["box", "cloud", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
reqwest = { version = "0.10", features = ["json", "gzip", "stream"] }
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.3"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"
bytes = "0.5"
http = "0.2"
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
